@@ -20,9 +20,9 @@
 
 package org.apache.cayenne.modeler.dialog;
 
-import java.awt.BorderLayout;
-import java.awt.Dimension;
-import java.awt.FlowLayout;
+import com.jgoodies.forms.builder.PanelBuilder;
+import com.jgoodies.forms.layout.CellConstraints;
+import com.jgoodies.forms.layout.FormLayout;
 
 import javax.swing.JButton;
 import javax.swing.JComponent;
@@ -31,10 +31,9 @@ import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JTextArea;
 import javax.swing.ScrollPaneConstants;
-
-import com.jgoodies.forms.builder.PanelBuilder;
-import com.jgoodies.forms.layout.CellConstraints;
-import com.jgoodies.forms.layout.FormLayout;
+import java.awt.BorderLayout;
+import java.awt.Dimension;
+import java.awt.FlowLayout;
 
 /**
  */
@@ -63,10 +62,7 @@ public class ValidationResultBrowserView extends JDialog {
                 "fill:min(50dlu;pref):grow",
                 "fill:20dlu, 9dlu, p, 3dlu, fill:40dlu:grow"));
         builder.setDefaultDialogBorder();
-        builder.add(new JScrollPane(
-                messageLabel,
-                ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED,
-                ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER), cc.xy(1, 1));
+        builder.add(messageLabel, cc.xy(1, 1));
         builder.addSeparator("Details", cc.xy(1, 3));
         builder.add(new JScrollPane(
                 errorsDisplay,
